syntax = "proto3";

option go_package = "github.com/PPrydorozhnyi/wallet";

import "google/type/decimal.proto";

message LedgerRecord {

  repeated Outcome outcomes = 1;
  Reason reason = 2;

  message Outcome {
    string id = 1;
    string balance_id = 2;
    optional string balance_type = 3;
    optional string vertical = 4;
    string currency = 5;
    optional TransactionType transactionType = 6;
    google.type.Decimal amount = 7;
    google.type.Decimal balance_after = 8;
  }

  enum TransactionType {
    DEBIT = 0;
    CREDIT = 1;
  }

  message Reason {
    string id = 1;
    string name = 2;
    string reference = 3;
    map<string, string> meta = 4;
  }
}
