syntax = "proto3";

option go_package = "github.com/PPrydorozhnyi/wallet";

import "google/type/decimal.proto";

message Wallet {

  map<string, WalletEntry> wallets = 1;

  message WalletEntry {
    map<string, Balance> balances = 1;
    uint64 created_at = 2;
    uint64 updated_at = 3;
  }

  message Balance {
    string type = 1;
    string vertical = 2;
    google.type.Decimal amount = 3;
    uint64 created_at = 4; // UNIX Timestamp
    uint64 updated_at = 5; // UNIX Timestamp
  }
}